--- a/Atividade 1 Grid Template/css/style.css
+++ b/Atividade 1 Grid Template/css/style.css
@@ -8,16 +8,14 @@
     margin: 0 auto;
 }
 
-.row {
+.col-3 {
+    height: 150px;
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
+    border: solid 2px #412323;
 }
 
-.col-3 {
-    width: 25%;
-}
 
 .col-3:nth-of-type(odd) {
     background-color: rgb(31, 96, 137)
